fix "Show WMS URL script stopped working"
add "--add-opens" to start scripts to prevent error "Unable to make public boolean java.util.ArrayList$Itr.hasNext() accessible: module java.base does not "opens java.util" to unnamed module @52af6cff" 

it might be a good idea to add these switches programmatically in the future like suggested here
https://github.com/quarkusio/quarkus/discussions/51041
by adding
--add-exports=java.base/jdk.internal.module=ALL-UNNAMED
--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
to compilation/runtime and use API "jdk.internal.module.Modules”